# ca_p1

./: .gitignore  CMakeLists.txt  README.md  aos.cpp  aos.hpp  common.cpp  common.hpp  common_gauss.cpp  common_gauss.hpp  common_hst.cpp  common_hst.hpp  common_mono.cpp  common_mono.hpp  common_rw.cpp  common_rw.hpp  imageaos.cpp  imageaos.hpp  imagesoa.cpp  img-aos.cpp  imgaos.cpp  imgsoa.cpp  main.cpp  progargs.cpp  proj1.cpp  read_method.txt  soa.cpp  soa.hpp
unit_test/: CMakeLists.txt  copy_test.cpp  unit_test.cpp  ut_aos.cpp  ut_soa.cpp
