cmake_minimum_required(VERSION 3.23)
project(image LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS_OFF)
add_compile_options(-Wall -Wextra -Werror -pedantic -pedantic-errors)
set(CMAKE_CXX_FLAGS_RELEASE "-march=native")
add_library(common common.cpp)
add_library(soa soa.cpp)
add_library(aos aos.cpp)
add_executable(image-soa main.cpp)
target_link_libraries(image-soa soa)
add_executable(image-aos main.cpp)
target_link_libraries(image-aos aos)
